--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>SIT223-SIT753 - Professional Practice in IT</h1>
     <h2> Unit details</h2>
-    <table style="width:100%" bordercolor="purple">
+    <table style="width:100%" bordercolor="pink">
         <tr>
             <td>Year: </td>
             <td>2023 unit information</td>
